# edwh

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  coding-guidelines.md  coding_guidelines.md  pyproject.toml  requirements-dev.txt
src/edwh/: __about__.py  __init__.py  __main__.py  cli.py  constants.py  discover.py  extendable_fab.py  health.py  helpers.py  improved_invoke.py  improved_logging.py  meta.py  plugins.py  tasks.py
src/edwh/local_tasks/: plugin.py
tests/: test_toml_config.py
